# barraCuda

./: .gitignore  BREAKING_CHANGES.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  LICENSE  PURE_RUST_EVOLUTION.md  README.md  SOVEREIGN_PIPELINE_TRACKER.md  SPRING_ABSORPTION.md  START_HERE.md  STATUS.md  WHATS_NEXT.md  deny.toml  rustfmt.toml
crates/barracuda/: Cargo.toml
crates/barracuda-core/: Cargo.toml
crates/barracuda-core/src/: discovery.rs  env_keys.rs  error.rs  health.rs  lib.rs  lifecycle.rs  rpc.rs  rpc_tests.rs  rpc_types.rs
crates/barracuda-core/src/ipc/: btsp.rs  btsp_discovery.rs  btsp_frame.rs  btsp_negotiate.rs  btsp_tests.rs  btsp_wire.rs  jsonrpc.rs  method_gate.rs  methods.rs  methods_coverage_tests.rs  methods_tests.rs  mod.rs  neural_announce.rs  transport.rs  transport_config.rs  transport_endpoint.rs  transport_tests.rs
crates/barracuda-core/tests/: btsp_discovery.rs  btsp_socket_compliance.rs  ipc_e2e.rs  no_gpu_probe.rs  transport_config.rs
crates/barracuda-naga-exec/: Cargo.toml
crates/barracuda-naga-exec/src/: error.rs  eval.rs  executor.rs  executor_tests.rs  invocation.rs  lib.rs  memory.rs  sim_buffer.rs  value.rs  vector_ops.rs  workgroup.rs
crates/barracuda-spirv/: Cargo.toml
crates/barracuda-spirv/src/: lib.rs
crates/barracuda/benches/: kokkos_parity.rs  lammps_parity.rs  scipy_parity.rs  unidirectional_benchmark.rs
crates/barracuda/examples/: device_capabilities.rs  esn_demo.rs  fhe_ntt_validation.rs  npu_integration.rs  pppm_debug.rs
crates/barracuda/src/: activations.rs  auto_tensor.rs  cast.rs  compute_graph.rs  cpu_conv_pool.rs  env_keys.rs  error.rs  genomics.rs  genomics_tests.rs  lib.rs  npu_executor.rs  provenance.rs  resource_quota.rs  resource_quota_tests.rs  rng.rs  runtime.rs  scheduler.rs  snn.rs  timeseries.rs  timeseries_tests.rs  tolerances.rs  unified_math.rs  utils.rs  validation.rs  vision.rs  workload.rs  workload_tests.rs
crates/barracuda/src/benchmarks/: harness.rs  mod.rs  operations.rs  report.rs
crates/barracuda/src/cpu_executor/: executor.rs  mod.rs  ops.rs  storage.rs  tests.rs
crates/barracuda/src/device/: akida.rs  akida_executor.rs  async_submit.rs  autotune.rs  backend.rs  batched_encoder.rs  buffer_test.rs  cache_hierarchy.rs  cache_hierarchy_tests.rs  compute_pipeline.rs  coral_compiler.rs  coral_reef_device.rs  device_types.rs  fma_policy.rs  hardware_calibration.rs  kernel_router.rs  latency.rs  mod.rs  pipeline_cache.rs  precision_brain.rs  precision_brain_tests.rs  precision_brain_trio_e2e_tests.rs  precision_tier.rs  probe_throughput.rs  registry.rs  routing.rs  silicon_profile.rs  sovereign_device.rs  sovereign_device_tests.rs  sovereign_discovery.rs  sovereign_dispatch_wire.rs  substrate.rs  test_harness.rs  test_pool.rs  toadstool_integration.rs  tpu.rs  unified.rs  vendor.rs  warmup.rs  wgpu_backend.rs
crates/barracuda/src/discovery/: capabilities.rs  mod.rs  tolerances.rs
crates/barracuda/src/dispatch/: config.rs  domain_ops.rs  mod.rs
crates/barracuda/src/esn_v2/: config.rs  mod.rs  model.rs  model_tests.rs  multi_head.rs  npu.rs
crates/barracuda/src/gpu_executor/: dispatch.rs  mod.rs  storage.rs
crates/barracuda/src/health/: biosignal.rs  microbiome.rs  mod.rs  pkpd.rs
crates/barracuda/src/interpolate/: cubic_spline.rs  cubic_spline_tests.rs  mod.rs
crates/barracuda/src/linalg/: cholesky.rs  eigh.rs  gen_eigh.rs  graph.rs  mod.rs  nmf.rs  ridge.rs  solve.rs
crates/barracuda/src/multi_gpu/: gpu_pool.rs  interconnect.rs  mod.rs  multi_device_pool.rs  pipeline_dispatch.rs  strategy.rs  tests.rs  topology.rs  types.rs
crates/barracuda/src/nautilus/: board.rs  brain.rs  evolution.rs  mod.rs  population.rs  readout.rs  shell.rs  spectral_bridge.rs
crates/barracuda/src/nn/: config.rs  esn_classifier.rs  fused_mlp.rs  layer.rs  loss.rs  lstm_reservoir.rs  metrics.rs  mod.rs  optimizer.rs  simple_mlp.rs
crates/barracuda/src/npu/: constants.rs  event_codec.rs  ml_backend.rs  mod.rs
crates/barracuda/src/numerical/: gradient.rs  hessian.rs  integrate.rs  lscfrk.rs  mod.rs  ode_generic.rs  rk45.rs  rk45_tests.rs  tolerance.rs
crates/barracuda/src/ops/: abs_wgsl.rs  acos_wgsl.rs  acosh_wgsl.rs  adabound.rs  adafactor.rs  adagrad.rs  adaptive_avg_pool1d.rs  adaptive_avgpool2d.rs  adaptive_instance_norm.rs  adaptive_max_pool1d.rs  adaptive_maxpool2d.rs  add.rs  affine_grid.rs  alibi.rs  alibi_position.rs  anchor_generator.rs  anderson_coupling.rs  argmax_wgsl.rs  argmin_wgsl.rs  asin_wgsl.rs  asinh_wgsl.rs  atan_wgsl.rs  atanh_wgsl.rs  autocorrelation_f64_wgsl.rs  avg_pool1d_wgsl.rs  avgpool2d.rs  avgpool3d.rs  batch_matmul.rs  batch_norm.rs  batch_pair_reduce_f64.rs  batch_tolerance_search_f64.rs  batched_ode_rk4.rs  batched_rk4_sweep.rs  bbox_transform.rs  bce_loss.rs  bessel_i0_f64_wgsl.rs  bessel_i0_wgsl.rs  bessel_j0_f64_wgsl.rs  bessel_j0_wgsl.rs  bessel_j1_f64_wgsl.rs  (+367 more)
crates/barracuda/src/optimize/: batched_bisection_gpu.rs  batched_bisection_gpu_tests.rs  batched_nelder_mead_gpu.rs  batched_nelder_mead_gpu_tests.rs  batched_nelder_mead_pipeline.rs  bfgs.rs  bisect.rs  brent.rs  brent_gpu.rs  diagnostics.rs  eval_record.rs  lbfgs.rs  lbfgs_gpu.rs  mod.rs  multi_start.rs  (+5 more)
crates/barracuda/tests/: api_integration_tests.rs  batched_encoder_tests.rs  cross_hardware_parity.rs  cross_spring_benchmark.rs  cross_spring_validation.rs  e2e_math_pipeline.rs  elementwise_wgsl_coverage.rs  fault_injection.rs  fhe_chaos_tests.rs  fhe_fast_poly_mul_integration.rs  fhe_fault_injection_tests.rs  fhe_fault_tests.rs  fhe_shader_unit_tests.rs  gpu_resident_pipeline_tests.rs  hardware_verification.rs  hotspring_fault_special_tests.rs  hotspring_mixing_grid_tests.rs  md_benchmark_harness.rs  multi_device_integration.rs  pooling_tests.rs  property_tests.rs  sarkas_ocp_validation.rs  scientific_chaos_tests.rs  scientific_e2e_tests.rs  scientific_fault_injection_tests.rs  three_springs_tests.rs
showcase/00-local-primal/03-fused-gpu-ops/: Cargo.toml  README.md
showcase/02-cross-primal-compute/01-coralreef-shader-compile/: Cargo.toml  README.md
(+1472 files in other folders)
