[workspace]
resolver = "3"
members = [
    "crates/barracuda-core",
    "crates/barracuda",
]

[workspace.package]
version = "0.3.6"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoPrimals/barraCuda"
authors = ["ecoPrimals Project"]
rust-version = "1.87"

[workspace.dependencies]
# Async runtime — minimal feature set (no fs, process)
tokio = { version = "1.50", features = [
    "rt", "rt-multi-thread", "macros", "net", "sync", "io-util", "time", "signal",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GPU compute (vendor-agnostic via WebGPU)
wgpu = { version = "28", default-features = false, features = [
    "wgsl",
    "vulkan",
    "vulkan-portability",
    "dx12",
    "metal",
    "webgpu",
    "spirv",
] }
bytemuck = { version = "1.25", features = ["derive"] }
naga = { version = "28", features = ["wgsl-in", "wgsl-out", "spv-out"] }

# Numerics
num-traits = "0.2"
rayon = "1.8"
rand = "0.9"

# Cryptographic hashing (for provenance, not crypto operations)
# 'pure' feature: no C SIMD assembly, fully pure Rust dependency chain
blake3 = { version = "1.8", default-features = false, features = ["pure"] }

# Utilities
half = "2.4"
bytes = "1.9"

# CLI
clap = { version = "4", features = ["derive"] }

# RPC
tarpc = { version = "0.37", features = ["tokio1", "serde-transport", "serde-transport-json", "tcp"] }
futures = "0.3"

# Block-on for sync contexts (wgpu 28 enumerate_adapters is async)
pollster = "0.3"

# Dev/test
tempfile = "3.8"
approx = "0.5"
proptest = "1.4"
