[package]
name = "barracuda-core"
description = "Core primal lifecycle for barraCuda — BARrier-free Rust Abstracted Cross-platform Unified Dimensional Algebra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
barracuda = { path = "../barracuda", version = "0.3.6", default-features = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
tarpc = { workspace = true }
futures = { workspace = true }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cast_lossless = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
doc_markdown = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
needless_pass_by_value = "allow"
map_unwrap_or = "allow"
items_after_statements = "allow"
similar_names = "allow"
struct_field_names = "allow"

[lints.rust]
missing_docs = "warn"

[[bin]]
name = "barracuda"
path = "src/bin/barracuda.rs"
doc = false
