[package]
name = "barracuda-core"
description = "Core primal lifecycle for barraCuda — BARrier-free Rust Abstracted Cross-platform Unified Dimensional Algebra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
barracuda = { path = "../barracuda", version = "0.3.12", default-features = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
tarpc = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
tokio-serde = { workspace = true }
chacha20poly1305 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64ct = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[[bin]]
name = "barracuda"
path = "src/bin/barracuda.rs"
doc = false
