[package]
name = "barracuda-core"
description = "Core primal lifecycle for barraCuda — BARrier-free Rust Abstracted Cross-platform Unified Dimensional Algebra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = ["tarpc-transport"]
tarpc-transport = ["dep:tarpc", "dep:futures", "dep:tokio-util", "dep:tokio-serde"]
sovereign-dispatch = ["barracuda/sovereign-dispatch"]

[dependencies]
barracuda = { path = "../barracuda", version = "0.4.0", default-features = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64ct = { workspace = true }
tarpc = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tokio-serde = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[[bin]]
name = "barracuda"
path = "src/bin/barracuda/main.rs"
doc = false
