[package]
name = "barracuda-spirv"
description = "SPIR-V passthrough bridge for barraCuda — isolates the single unsafe create_shader_module_spirv call"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
wgpu = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
