[package]
name = "barracuda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "barraCuda — BARrier-free Rust Abstracted Cross-platform Unified Dimensional Algebra. Vendor-agnostic GPU compute via WGSL."
keywords = ["gpu", "tensor", "compute", "webgpu", "wgsl"]
categories = ["science", "hardware-support"]

[dependencies]
thiserror = { workspace = true }

# GPU compute (WebGPU - vendor-agnostic)
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
naga = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Block-on for sync wgpu calls (enumerate_adapters)
pollster = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
blake3 = { workspace = true }
half = { workspace = true }
bytes = { workspace = true }

# SPIR-V passthrough bridge — isolates the single unsafe call to
# wgpu::Device::create_shader_module_passthrough. Enables Tier 1
# sovereign SPIR-V compilation (naga IR → SPIR-V → GPU, no WGSL re-emit).
barracuda-spirv = { path = "../barracuda-spirv", version = "0.3.6", optional = true }

# coral-gpu was previously listed here as an optional compile-time dep.
# Removed: barraCuda uses IPC-first architecture — coralReef compiles
# shaders and toadStool dispatches, all via JSON-RPC at runtime.
# No compile-time coupling between primals.

[dev-dependencies]
tempfile = { workspace = true }
pollster = { workspace = true }
tokio = { workspace = true }
approx = { workspace = true }
proptest = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
barracuda-naga-exec = { path = "../barracuda-naga-exec" }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
# Casting — pervasive in GPU compute (u32↔usize↔f32↔f64 constantly)
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "warn"
cast_possible_wrap = "allow"
# Doc — promoted: zero violations, now enforced
doc_markdown = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
# Naming — wgpu/physics APIs use domain-specific names
module_name_repetitions = "allow"
similar_names = "allow"
struct_field_names = "allow"
many_single_char_names = "allow"
# Style — subjective pedantic lints
must_use_candidate = "allow"
return_self_not_must_use = "allow"
items_after_statements = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
enum_glob_use = "allow"
option_if_let_else = "allow"
manual_let_else = "allow"
single_match_else = "allow"
if_not_else = "allow"
redundant_else = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
default_trait_access = "allow"
# Numeric — scientific compute uses raw literals and float comparisons
unreadable_literal = "allow"
float_cmp = "allow"
manual_midpoint = "allow"
# GPU/async patterns
unused_async = "allow"
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
trivially_copy_pass_by_ref = "allow"
# Struct/function complexity
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
implicit_hasher = "allow"
pub_underscore_fields = "allow"
missing_fields_in_debug = "allow"
inline_always = "allow"
wrong_self_convention = "allow"
# Formatting — scientific code uses specific formats
uninlined_format_args = "allow"
doc_comment_double_space_linebreaks = "allow"
# Promoted from bulk-allow — clean pass, now enforced.
needless_raw_string_hashes = "warn"
redundant_closure_for_method_calls = "warn"
bool_to_int_with_if = "warn"
cloned_instead_of_copied = "warn"
map_unwrap_or = "warn"
no_effect_underscore_binding = "warn"
format_push_string = "warn"
explicit_iter_loop = "warn"
used_underscore_binding = "warn"
# Promoted from allow — all 7 sites fixed.
if_same_then_else = "warn"
needless_range_loop = "warn"
# Nursery — blanket-enabled above. Suppressions for scientific GPU compute:
suboptimal_flops = "warn"
# missing_const_for_fn: 911 sites — const fn propagation is evolving in Rust;
# many functions use allocations or traits that aren't const-stable yet.
missing_const_for_fn = "allow"
# suspicious_operation_groupings: false positives for x*x (squaring), dx*dx
# (Courant number), pe*pe/(pe+s) — correct mathematical idioms.
suspicious_operation_groupings = "allow"
# Promoted from allow — all 332 sites evolved to Self.
use_self = "warn"
# future_not_send: GPU async futures hold !Send wgpu types by design.
future_not_send = "allow"
# redundant_pub_crate: pub(crate) in private modules is intentional API surface.
redundant_pub_crate = "allow"
# while_float: scientific iteration with float conditions is intentional.
while_float = "allow"
# significant_drop_tightening: false positives in async GPU code where temporaries
# hold wgpu guards that must live through the await point.
significant_drop_tightening = "allow"
significant_drop_in_scrutinee = "allow"
# Promoted from allow — all 2 sites evolved to <[T; N]>::from().
tuple_array_conversions = "warn"
# large_stack_frames: test framework artifact — the auto-generated test main
# allocates [&TestDescAndFn; 3466] on the stack. Not production code.
large_stack_frames = "allow"

[lints.rust]
missing_docs = "warn"

[features]
default = ["gpu", "domain-models"]

gpu = ["dep:wgpu", "dep:bytemuck", "dep:naga"]

# Sovereign dispatch via IPC to coralReef (compile) + toadStool (dispatch).
# Enables CoralReefDevice which uses JSON-RPC to communicate with the
# sovereign pipeline at runtime — no compile-time coupling to coral-gpu.
sovereign-dispatch = ["gpu"]

# SPIR-V passthrough: enables Tier 1 sovereign compilation (naga IR → SPIR-V
# → GPU driver, bypassing naga's WGSL re-emission). Requires the barracuda-spirv
# bridge crate which isolates the single unsafe create_shader_module_passthrough call.
spirv-passthrough = ["gpu", "dep:barracuda-spirv"]

# Domain model umbrella — enables all domain-specific modules.
# Disable with default-features = false to get pure math + GPU compute only.
# Individual domain features allow selective compilation for consumers
# that only need specific domains (e.g., hotSpring enables domain-pde).
domain-models = [
    "domain-esn",
    "domain-fhe",
    "domain-fold",
    "domain-genomics",
    "domain-lattice",
    "domain-md",
    "domain-nn",
    "domain-pde",
    "domain-pharma",
    "domain-physics",
    "domain-snn",
    "domain-timeseries",
    "domain-vision",
]
domain-esn = []
domain-fhe = []
domain-fold = []
domain-genomics = []
domain-lattice = []
domain-md = []
domain-nn = []
domain-pde = []
domain-pharma = []
domain-physics = []
domain-snn = []
domain-timeseries = ["domain-esn"]
domain-vision = []

serde = []
parallel = []
benchmarks = []
debug-pppm = []
[[bin]]
name = "validate_gpu"
required-features = ["gpu", "domain-fhe"]

[[bin]]
name = "bench_fp64_ratio"
required-features = ["gpu"]

[[bin]]
name = "bench_wgsize_nvk"
required-features = ["gpu"]

[[bin]]
name = "bench_f64_builtins"
required-features = ["gpu"]

[[bench]]
name = "kokkos_parity"
harness = false
required-features = ["gpu"]
