[package]
name = "barracuda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "barraCuda — BARrier-free Rust Abstracted Cross-platform Unified Dimensional Algebra. Vendor-agnostic GPU compute via WGSL."
keywords = ["gpu", "tensor", "compute", "webgpu", "wgsl"]
categories = ["science", "hardware-support"]

[dependencies]
thiserror = { workspace = true }

# GPU compute (WebGPU - vendor-agnostic)
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
naga = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Block-on for sync wgpu calls (enumerate_adapters)
pollster = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
blake3 = { workspace = true }
half = { workspace = true }
bytes = { workspace = true }

# SPIR-V passthrough bridge — isolates the single unsafe call to
# wgpu::Device::create_shader_module_passthrough. Enables Tier 1
# sovereign SPIR-V compilation (naga IR → SPIR-V → GPU, no WGSL re-emit).
barracuda-spirv = { path = "../barracuda-spirv", version = "0.3.12", optional = true }

# CPU shader interpretation — run WGSL shaders on CPU via naga-exec.
# Enables the shader-as-truth architecture where the same WGSL used on GPU
# can also execute on CPU for validation, testing, and CPU-only deployments.
barracuda-naga-exec = { path = "../barracuda-naga-exec", version = "0.3.12", optional = true }

# coral-gpu was previously listed here as an optional compile-time dep.
# Removed: barraCuda uses IPC-first architecture — coralReef compiles
# shaders and toadStool dispatches, all via JSON-RPC at runtime.
# No compile-time coupling between primals.

[dev-dependencies]
tempfile = { workspace = true }
pollster = { workspace = true }
tokio = { workspace = true }
approx = { workspace = true }
proptest = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
barracuda-naga-exec = { path = "../barracuda-naga-exec" }

[lints]
workspace = true

[features]
default = ["gpu", "domain-models", "cpu-shader"]

gpu = ["dep:wgpu", "dep:bytemuck", "dep:naga"]

# Sovereign dispatch via IPC to coralReef (compile) + toadStool (dispatch).
# Enables CoralReefDevice which uses JSON-RPC to communicate with the
# sovereign pipeline at runtime — no compile-time coupling to coral-gpu.
sovereign-dispatch = ["gpu"]

# SPIR-V passthrough: enables Tier 1 sovereign compilation (naga IR → SPIR-V
# → GPU driver, bypassing naga's WGSL re-emission). Requires the barracuda-spirv
# bridge crate which isolates the single unsafe create_shader_module_passthrough call.
spirv-passthrough = ["gpu", "dep:barracuda-spirv"]

# CPU shader dispatch via naga-exec: interpret WGSL compute shaders on CPU.
cpu-shader = ["dep:barracuda-naga-exec"]

# Domain model umbrella — enables all domain-specific modules.
# Disable with default-features = false to get pure math + GPU compute only.
# Individual domain features allow selective compilation for consumers
# that only need specific domains (e.g., hotSpring enables domain-pde).
domain-models = [
    "domain-esn",
    "domain-fhe",
    "domain-fold",
    "domain-genomics",
    "domain-lattice",
    "domain-md",
    "domain-nn",
    "domain-pde",
    "domain-pharma",
    "domain-physics",
    "domain-snn",
    "domain-timeseries",
    "domain-vision",
]
domain-esn = []
domain-fhe = []
domain-fold = []
domain-genomics = []
domain-lattice = []
domain-md = []
domain-nn = []
domain-pde = []
domain-pharma = []
domain-physics = []
domain-snn = []
domain-timeseries = ["domain-esn"]
domain-vision = []

serde = []
parallel = []
benchmarks = []
debug-pppm = []
# GPU stress tests that SIGSEGV under parallel execution (Mesa llvmpipe
# thread safety). Gated so `cargo test --workspace` passes cleanly;
# use `cargo test --features stress-tests` or nextest gpu-serial profile.
stress-tests = []
[[bin]]
name = "validate_gpu"
required-features = ["gpu", "domain-fhe"]

[[bin]]
name = "bench_fp64_ratio"
required-features = ["gpu"]

[[bin]]
name = "bench_wgsize_nvk"
required-features = ["gpu"]

[[bin]]
name = "bench_f64_builtins"
required-features = ["gpu"]

[[test]]
name = "fault_injection"
required-features = ["stress-tests"]

[[test]]
name = "fhe_chaos_tests"
required-features = ["stress-tests"]

[[test]]
name = "hardware_verification"
required-features = ["stress-tests"]

[[test]]
name = "batched_encoder_tests"
required-features = ["stress-tests"]

[[test]]
name = "fhe_fault_injection_tests"
required-features = ["stress-tests"]

[[test]]
name = "hotspring_fault_special_tests"
required-features = ["stress-tests"]

[[test]]
name = "cross_hardware_parity"
required-features = ["stress-tests"]

[[test]]
name = "multi_device_integration"
required-features = ["stress-tests"]

[[test]]
name = "pooling_tests"
required-features = ["stress-tests"]

[[test]]
name = "scientific_e2e_tests"
required-features = ["stress-tests"]

[[test]]
name = "scientific_fault_injection_tests"
required-features = ["stress-tests"]

[[test]]
name = "fhe_fault_tests"
required-features = ["stress-tests"]

[[test]]
name = "hotspring_mixing_grid_tests"
required-features = ["stress-tests"]

[[test]]
name = "scientific_chaos_tests"
required-features = ["stress-tests"]

[[bench]]
name = "kokkos_parity"
harness = false
required-features = ["gpu"]
