# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "barracuda-showcase-coralreef-compile"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[workspace]

[dependencies]
barracuda = { path = "../../../crates/barracuda" }
tokio = { version = "1", features = ["full"] }
